# simd-popcnt

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: benchmark.yml  ci.yml
examples/: benchmark.rs
scripts/: benchmark-vs-prev-release.sh
src/: lib.rs
