[package]
name         = "simd-popcnt"
version      = "0.1.0"
edition      = "2024"
# AVX512 intrinsics in std::arch were stabilized in Rust 1.89.
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
description  = "Fast bit population count (number of 1 bits) of a byte slice using POPCNT, AVX2, AVX512, ARM NEON and ARM SVE."
repository   = "https://github.com/kimwalisch/simd-popcnt"
readme       = "README.md"
keywords     = ["popcount", "popcnt", "simd", "bitcount", "hamming"]
categories   = ["algorithms"]
# Dev-only files that consumers of the published crate don't need. A nested
# rust-toolchain.toml is ignored by downstream builds anyway (and pins nightly).
exclude      = [".github", "rust-toolchain.toml"]

[lib]
name = "simd_popcnt"
